Updated aboutPage string

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">Project</string>
     <string name="aboutPage">
         Välkommen till vår "Om oss"-sida! Vi är ett företag som ägnar oss åt att skapa unika
-        och fantasifulla bilar. Varje modell i vår samling har noggrant utformats med omsorg
+        och fantasifulla bilar för bilälskare. Varje modell i vår samling har noggrant utformats med omsorg
         och kreativitet för att erbjuda en oförglömlig upplevelse. Vi strävar efter att
         kombinera stil, prestanda och innovation för att skapa bilar som sticker ut från
         mängden. Besök vår hemsida för att utforska våra spännande bilmodeller och upptäcka
